--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "the_venue",
+  "name": "the-venue",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "1.4.3",
-    "@material-ui/icons": "2.0.2",
-    "global": "^4.3.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-reveal": "1.2.2",
-    "react-scripts": "2.1.1",
-    "react-scroll": "1.7.9",
-    "react-slick": "0.23.1",
-    "surge": "^0.20.1"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
+    "@types/react-slick": "^0.23.13",
+    "framer-motion": "^11.5.6",
+    "next": "14.2.13",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "sharp": "^0.33.5"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
