Add docker ignore and caching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
+
 services:
   the_venue:
     build: .
     ports:
-      - "3000:3000"
+      - "3000:3000"  # Map port 3000 in the container to port 3000 on your host
     environment:
       - NODE_ENV=production
