--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,14 @@ name: 'Lint Code'
 on:
   push:
     branches: [master, main]
+    paths_ignore:
+      - ".gitignore"
+      - "*.md"
   pull_request:
     branches: [master, main]
+    paths_ignore:
+      - ".gitignore"
+      - "*.md"
 jobs:
   lint_js:
       name: Lint JavaScript Files
@@ -14,7 +20,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 20
       - name: Install JSHint
         run: npm install jshint --global
       - name: Run Linter
