--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-venue",
+  "name": "the_venue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-scroll": "^1.8.10",
-    "@types/react-slick": "^0.23.13",
-    "framer-motion": "^11.5.6",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "react-scroll": "^1.9.0",
-    "react-slick": "^0.30.2",
-    "sharp": "^0.33.5"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
