--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:staged": "lint-staged -c lint-staged.config.msj -p false"
   },
   "dependencies": {
     "@next/env": "^14.2.13",
@@ -26,7 +27,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
+    "shell-quote": "^1.8.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
